Support sorting recipes so that bookmarked and craftable recipes are shown first